--- a/stylelanding.css
+++ b/stylelanding.css
@@ -1,159 +1,174 @@
 /* font-family: 'Archivo', sans-serif; */
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    font-family: Trebuchet MS;
-  } 
+  box-sizing: border-box;
+  margin: 0;
+  font-family: Trebuchet MS;
+} 
 
-  ::-webkit-scrollbar{
-    display: none;
-  }
-    
-  
-  .hero-section {
-    height: 100vh;
-    
-    color: white;
-    
-    background-image: 
-      linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)),
-      url('https://picsum.photos/id/385/1920/1080');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-  }
-  
-  .hero-text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    font-size: 1.4em;
-    letter-spacing: 9px;
-  }
-  
-  h1 {
-    margin: 0 0 3rem 0;
-    font-family: 'Varta', sans-serif;
-    text-shadow: 2px 2px black;
-  }
-  
-  .hero-text p {
-    font-family: 'Archivo', sans-serif;
-    text-shadow: 2px 2px black;
-    letter-spacing: 3px;
-    color: white;
-  }
-  
-  nav {
-    padding: 1em 1em;
-    transition: all .3s;
-    padding: 30px;
-  }
+::-webkit-scrollbar{
+  display: none;
+}
 
+html {
+  scroll-behavior: smooth;
+}
   
-  ul {
-    display: flex;
-    list-style-type: none;
-    justify-content: space-around;
-  }
-  
-  .logo {
-    flex: 1 0 auto; 
-    font-weight: 600;
-    letter-spacing: 2px;
-    font-size: 25px;
-  }
-  
-  .logo:hover {
-    text-decoration: none;
-    cursor: default;
-  }
-  
-  li {
-    margin-right: 35px;
-    font-size: 20px;
-  }
-  
-  li:hover {
-    text-decoration: underline;
-    cursor: pointer;
-  }
-  
-  .nav-link:hover {
-    color: #ff9800;
-    border-radius: 10px;
-    text-decoration: none;
 
-  }
+.hero-section {
+  height: 100vh;
   
-  .nav-link:active {
-    transform: scale(1);
-  }
-
-  .isi-content1{
-    width: 95%;
-    height: 600px;
-    background-color: #d2cfca;
-    border-radius: 30px;
-    margin: 30px auto;
-    display: flex;
-    align-items:center;
-    justify-content: space-evenly;
-  }
-
-  .isi-content1 button{
-    width: 100%;
-    background-color: transparent;
-    margin-top: 20px;
-    border-radius: 20px; 
-    padding: 5px;
-  }
-
-  .isi-content1 button:hover{
-    background-color: #3AA8D9;
-    color: white;
-
-  }
-
-  .isi-content1 img{
-    border-radius:20px ;
-  }
-  .isi-content2 img{
-    border-radius:20px ;
-  }
+  color: white;
   
-  .container {
-    padding: 2px 16px;
-    margin: 20px;
-    text-align: center;
-  }
+  background-image: 
+    linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)),
+    url('img/Untitled\ design.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
 
-  .isi-content2{
-    display: flex;
-    justify-content: space-evenly;
-    margin-bottom: 30px;
-  }
+.hero-text {
+  position: absolute;
+  left: 98px;
+  top:240px;
+  font-size: 20px;
+  letter-spacing: 2px;
+}
 
-  .isi-content2 button{
-    width: 100%;
-    background-color: transparent;
-    margin-top: 20px;
-    border-radius: 20px; 
-    padding: 5px; 
-  }
+.hero-text h1{
+  size: 40px;
+  font-weight: 700;
+}
 
-  .isi-content2 button:hover{
-    background-color: #3AA8D9;
-    color: white;
+.hero-text p {
+  font-family: 'Archivo', sans-serif;
+  /* text-shadow: 2px 2px black; */
+  letter-spacing: 1px;
+  color: white;
+  width: 40%;
+}
 
-  }
+.hero-text button{
+  padding: 5px;
+  width: 19%;
+  border: none;
+  border-radius: 10px;
+  background-color:#00246A ;
+  font-weight: 700;
+  font-size: 20px;
+  color: white;
+}
 
+.hero-text button:hover{
+  transition: 0.3s;
+  background-color:#01205e ;
+}
+
+nav {
+  padding: 1em 1em;
+  transition: all .3s;
+  padding: 30px;
+}
+
+
+ul {
+  display: flex;
+  list-style-type: none;
+  justify-content: space-around;
+}
+
+.logo {
+  flex: 1 0 auto; 
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-size: 25px;
+}
+
+.logo:hover {
+  text-decoration: none;
+  cursor: default;
+}
+
+li {
+  margin-right: 35px;
+  font-size: 20px;
+}
+
+li:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.nav-link:hover {
+  text-decoration: none;
+}
+
+.isi-content1{
+  height: 600px;
+  /* background: linear-gradient(135deg,#A8BDE1, #6982B1 ); */
+  /* background-image: url(./img/pexels-scott-webb-3255761.jpg); */
+  margin: 100px auto;
+  display: flex;
+  align-items:center;
+  justify-content: space-evenly;
+}
+
+.isi-content1 button{
+  width: 100%;
+  background-color: #00246A;
+  margin-top: 20px;
+  border-radius: 10px; 
+  padding: 5px;
+  color: white;
+  border: none;
+}
+
+.isi-content1 button:hover{
+  background-color: #01205e;
+  color: white;
+
+
+}
+
+.isi-content1 img{
+  border-radius:20px ;
+}
+.isi-content2 img{
+  border-radius:20px ;
+}
+
+.container {
+  padding: 2px 16px;
+  margin: 20px;
+  text-align: center;
+}
+
+.isi-content2{
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 30px;
+  background-color: #398FFC;
+  margin: 100px auto;
+  display: flex;
+  align-items:center;
+  width: 97%;
+  border-radius: 20px;
+}
+
+.isi-content2 button{
+  width: 100%;
+  background-color: #00246A;
+  margin-top: 20px;
+  border-radius: 10px; 
+  padding: 5px;
+  color: white;
+  border: none;
+}
+
+.isi-content2 button:hover{
+  background-color: #01205e;
+  color: white;
   
-  
-  
-  
-  
-  
+
+}
