--- a/stylelanding.css
+++ b/stylelanding.css
@@ -148,7 +148,7 @@ li:hover {
   display: flex;
   justify-content: space-evenly;
   margin-bottom: 30px;
-  background-color: #398FFC;
+  background-color: #00246A;
   margin: 100px auto;
   display: flex;
   align-items:center;
@@ -158,7 +158,7 @@ li:hover {
 
 .isi-content2 button{
   width: 100%;
-  background-color: #00246A;
+  background-color: #3D3D3F;
   margin-top: 20px;
   border-radius: 10px; 
   padding: 5px;
